# ChangeLog for app-crypt/qca
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/qca/ChangeLog,v 1.81 2010/01/13 18:44:41 abcd Exp $

  07 Mar 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +files/qca2.pc.in, qca-2.0.2-r2.ebuild:
  Install qca2.pc while still avoiding qconf. This breakage was reported by
  Ed Tomlinson (edt).

  13 Feb 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> qca-2.0.2-r2.ebuild:
  Fix directories in sed expressions. Add QMAKE_LIBDR_QT variable to eqmake4
  call until bug 304975 is resolved.

  13 Feb 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> qca-2.0.2-r2.ebuild, -files/app.pri.in~,
  -files/conf.pri.in~, -files/confapp.pri.in~:
  Fixed up junky qca that I accidentally imported in a messed up state.

  13 Jan 2010; Jonathan Callen <abcd@gentoo.org> qca-2.0.2-r2.ebuild:
  Add initial USE=aqua support, fix rpaths for prefix

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org> qca-2.0.2-r2.ebuild:
  Add ~arm wrt #288000

  14 Dec 2009; Jonathan Callen <abcd@gentoo.org> qca-2.0.2-r2.ebuild:
  Use EPREFIXed ca-certificates

  14 Dec 2009; Jonathan Callen <abcd@gentoo.org> -qca-2.0.0-r2.ebuild,
  -files/qca-2.0.0-debug-same-pkgconfig-file.patch, -qca-2.0.2-r1.ebuild,
  qca-2.0.2-r2.ebuild:
  Add ~amd64-linux/~x86-linux; drop old versions

  13 Nov 2009; Joseph Jezak <josejx@gentoo.org> qca-2.0.2-r2.ebuild:
  Marked ppc64 stable for bug #272685.

  05 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qca-2.0.0-r2.ebuild:
  Removed alternative dependency and references to Qt metapackage, converted
  to EAPI=2

  29 Aug 2009; nixnut <nixnut@gentoo.org> qca-2.0.2-r2.ebuild:
  ppc stable #272865

  09 Aug 2009; nixnut <nixnut@gentoo.org> qca-2.0.2-r1.ebuild:
  ppc stable #272865

  21 Jul 2009; Raúl Porcel <armin76@gentoo.org> qca-2.0.2-r2.ebuild:
  alpha/ia64/sparc stable wrt #272865
