@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX app.pri.in 246 RMD160 3bddf86df88a0cbaad4c780fdee840216daba96a SHA1 6fd8e2c7f0ed72ab734183fffe663366b436b845 SHA256 81529b8999546a440154c403c30308d35380c32c7f09fbe02e577f85a0c35a0a
 AUX conf.pri.in 533 RMD160 b105d169207de318a67f46e27686bb6cedcc721b SHA1 e69fd52a96cb630357f3f763834df2b9a72719db SHA256 caf6cb1a6ff28592c5ecb19b042ba9a072b1d1a5ce45bed16a524120feb5822e
 AUX qca-2.0.2-pcfilespath.patch 409 RMD160 65368cb474f2dd1d79b0c9d00424831acd777465 SHA1 a2defc2ae7d3dc31986f89cb8ec2760df85cb208 SHA256 d4d276c13f08bc538b79779aba49126b310df5c97f95b2c7010de050c880d695
-AUX qca2.pc.in 223 RMD160 25a2445f02a90df07ef22624baba629ce4a624ba SHA1 2a522f88bb7adc3cd5bcc3ad050474bc5089a54a SHA256 5c55d6ede069d27638ff5a3d55339c14438948bd34a781fb6f0be2df28a13b58
+AUX qca2.pc.in 259 RMD160 89a0d8d5bfd4cc226d97d3e932e4507152b96902 SHA1 11577e62593fa0ea705abac8a9136fc4dc64297e SHA256 6a835f1652e66dd685cd54f95fad3ab405178f334028216c89ba90ff3a45ed08
 DIST qca-2.0.2.tar.bz2 1937201 RMD160 18b0f497709f9700227644977946735d2ec3c623 SHA1 5a414c3296cd37d1ec34182be0d089c5073f55a8 SHA256 49b5474450104a2298747c243de1451ab7a6aeed4bf7df43ffa4b7128a2837b8
 EBUILD qca-2.0.2-r2.ebuild 2890 RMD160 622cc861cc0825e21af06b52aa03f08f2d683a04 SHA1 69eb9e745a24e623fd07e7585f2fc1e0f6cdb645 SHA256 b5b15a62931d840bc2f09fcde80e488a62bb5d2a9156d40ebe934878617fa1ed
-MISC ChangeLog 10602 RMD160 ec7b8aad286ab31a0fdd582ccd70dddf8bf6815e SHA1 306a54a634902941e4f9e1c59a2c0b1e089d930c SHA256 52bac3739f84bf6f1af3f72fdc9289279d8a6df603611333ba95a92a361b6378
+MISC ChangeLog 10838 RMD160 eea9284c7304ee76025e1c643b2380c188fb5164 SHA1 fee21e3ff331cd4398a63f72bc5384d12f840cd9 SHA256 5385658e621e6af5e87227e7f67eec3d7c0e154eb567be578449dc31a31ca3ad
 MISC metadata.xml 192 RMD160 421d4665996ea38fdfc756e2da700603abe17ec7 SHA1 c32af4b790776c36b524e5f2e2dca587c9cd3351 SHA256 e585d77a075b30463ad28cc89374f9ef2876636bca95a23321b824e0122aa6fd
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkyQNi4ACgkQni8M22OVw8DrsQCgkklofJiM03nBUkGIMaTDqbDQ
+p9MAnRomdIVHeax3lxXvRnWA1kD1YaSW
+=UsxP
+-----END PGP SIGNATURE-----
