@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-crypt/qca/ChangeLog,v 1.81 2010/01/13 18:44:41 abcd Exp $
 
+  15 Sep 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> files/qca2.pc.in:
+  Fix template qca2.pc.in so that ``pkg-config --cflags qca2'' gives
+  -I/usr/include/qca2/QtCrypto instead of -I/usr/include/QtCrypto.
+
   07 Mar 2010; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> +files/qca2.pc.in, qca-2.0.2-r2.ebuild:
   Install qca2.pc while still avoiding qconf. This breakage was reported by
